--- a/ege_perfil/templates/ege_perfil/perfil_index.html
+++ b/ege_perfil/templates/ege_perfil/perfil_index.html
@@ -6,41 +6,175 @@
 {% block left_menu %}{% endblock %}
 
 {% block content %}
-
     <div id="perfil">
-        <div>
-            <h3 class="headline mb-0 mt-3">{{request.session.ege.user.presentation_name}}</h3>
-            <p>${ nome }</p>
+        <v-app id="inspire">
+            <v-content style="padding:0">
+              <v-container fluid fill-height style="padding:0">
+                <v-layout align-center justify-center column>
+                  <v-flex d-flex align-center style="flex-direction:column">
+                    <img
+                      :src="photo_user"
+                      class="elevation-6"
+                      style="z-index:1; position:relative; width: 15%; top: 5em; border-radius:50%; flex:0 !important"
+                    >
+                    <v-card class="elevation-12" style="max-width:85%;width:50em;border-top:2px solid LightGray">
+                      <v-card-title primary-title class="mt-5">
+                        <div style="width:100%">
+                          <h3 dark class="headline mb-0 mt-3">Nome do aluno</h3>
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>Matrícula</h5>
+                              <p>0000.0000.000-00</p>
+                            </div>
+                            <div>
+                              <h5>Pólo</h5>
+                              <p>Apodi</p>
+                            </div>
+                            <div>
+                              <h5>Campus</h5>
+                              <p>EAD</p>
+                            </div>
+                          </div>
+                        </div>
 
-            <dl>
-                <dt>Matrícula</dt>
-                <dd>{{request.session.ege.user.username}}</dd>
-                <div v-if="see"><dt>Campus</dt><dd>{{request.session.ege.user.campus}}</dd></div>
-                <div v-if="see">
-                    <dt>Polo</dt>
-                    <dd>{{request.session.ege.user.polo}}</dd>
-                </div>
-                <div v-if="see"><dt>Bibliografia</dt><dd>{{request.session.ege.profile.bibliografia}}</dd></div>
-                <div v-if="see">
-                    <dt>Necessidades especiais</dt>
-                    <!--
-                    <dd>
-                        <ul v-for="ne in ege.profile.necessidades_especiais">
-                            <li>{{ne.titulo}} = {{ne.publico}}</li>
-                        </ul>
-                    </dd>
-                    -->
-                </div>
-            </dl>
-        </div>
-        <!-- Este aqui acho bom ser via AJAX
-        Diários no Moodle (só para alunos)
-           Nome do componente curricular
-           Código do diário
-           Nota final (caso exista)
-        -->
-        <p>Caso queiras, podes <a href='./logout/'>sair</a>.</p>
+                        <v-divider style="margin:0 25px"></v-divider>
+
+                        <div style="width:100%">
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>Biografia</h5>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit arcu eget consectetur fringilla. Suspendisse potenti. Ut egestas interdum efficitur. Quisque varius tempus dapibus. Quisque iaculis, sapien et condimentum semper, nibh ligula vehicula dolor, nec dapibus ligula ex id libero. Maecenas pulvinar tortor eu suscipit vestibulum. Quisque tristique quis elit a posuere. Sed ac sem mollis, laoreet mi a, pulvinar tellus. Aenean at eros augue. Duis sed lacus quam. Sed dignissim, arcu at laoreet elementum, leo lorem interdum urna, vel laoreet sem orci a diam. Phasellus a nulla a turpis eleifend elementum vel non metus. Aliquam interdum molestie dapibus. Morbi laoreet augue nibh, non venenatis libero tincidunt vel. Donec posuere tortor a ligula consectetur, ut eleifend est scelerisque.</p>
+                            </div>
+                          </div>
+                        </div>
+
+                        <v-divider style="margin:0 25px"></v-divider>
+
+                        <div style="width:100%">
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>E-mail</h5>
+                              <p class="mt-2">email@email.com</p>
+                            </div>
+                          </div>
+                        </div>
+
+                        <v-divider style="margin:0 25px"></v-divider>
+
+                        <div style="width:100%">
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>Recurso de acessibilidade</h5>
+                              <div style="line-height:1em">
+                                <p class="mb-0 mt-2">Libras</p>
+                                <p style="color:grey">Ativado</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <v-divider style="margin:0 25px"></v-divider>
+
+                        <div style="width:100%">
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>Necessidades especiais</h5>
+                              <p class="mt-2">Baixa visão</p>
+                            </div>
+                          </div>
+                        </div>
+
+                        <v-divider style="margin:0 25px"></v-divider>
+
+                        <div style="width:100%">
+                          <div class="d-flex row align-center justify-between mt-3">
+                            <div>
+                              <h5>Cursos inscritos</h5>
+                              <v-card class="mt-2">
+                                <v-card-title>
+                                  <div style="width:100%">
+                                    <p dark>Tecnologia e Desenvolvimento de Software</p>
+                                    <div class="d-flex row align-center justify-between">
+                                      <div>
+                                        <span style="color:grey">0000.0000.000-00</span>
+                                      </div>
+                                      <div>
+                                        <span style="color:grey">Média Final: 9.0</span>
+                                      </div>
+                                    </div>
+                                    <v-progress-linear
+                                      v-model="valueDeterminate_1"
+                                      color="success"
+                                    ></v-progress-linear>
+                                  </div>
+                                </v-card-title>
+                              </v-card>
+
+                              <v-card class="mt-2">
+                                <v-card-title>
+                                  <div style="width:100%">
+                                    <p dark>Gestão Ambiental</p>
+                                    <div class="d-flex row align-center justify-between">
+                                      <div>
+                                        <span style="color:grey">0000.0000.000-00</span>
+                                      </div>
+                                    </div>
+                                    <v-progress-linear
+                                      v-model="valueDeterminate_2"
+                                      color="warning"
+                                    ></v-progress-linear>
+                                  </div>
+                                </v-card-title>
+                              </v-card>
+                            </div>
+                          </div>
+                        </div>
+                      </v-card-title>
+                    </v-card>
+                  </v-flex>
+
+                </v-layout>
+              </v-container>
+            </v-content>
+          </v-app>
     </div>
+    {% comment %}
+        <div id="1perfil">
+            <div>
+                <h3 class="headline mb-0 mt-3">{{request.session.ege.user.presentation_name}}</h3>
+                <p>${ nome }</p>
+
+                <dl>
+                    <dt>Matrícula</dt>
+                    <dd>{{request.session.ege.user.username}}</dd>
+                    <div v-if="see"><dt>Campus</dt><dd>{{request.session.ege.user.campus}}</dd></div>
+                    <div v-if="see">
+                        <dt>Polo</dt>
+                        <dd>{{request.session.ege.user.polo}}</dd>
+                    </div>
+                    <div v-if="see"><dt>Bibliografia</dt><dd>{{request.session.ege.profile.bibliografia}}</dd></div>
+                    <div v-if="see">
+                        <dt>Necessidades especiais</dt>
+                        <!--
+                        <dd>
+                            <ul v-for="ne in ege.profile.necessidades_especiais">
+                                <li>{{ne.titulo}} = {{ne.publico}}</li>
+                            </ul>
+                        </dd>
+                        -->
+                    </div>
+                </dl>
+            </div>
+            <!-- Este aqui acho bom ser via AJAX
+            Diários no Moodle (só para alunos)
+               Nome do componente curricular
+               Código do diário
+               Nota final (caso exista)
+            -->
+            <p>Caso queiras, podes <a href='./logout/'>sair</a>.</p>
+        </div>
+    {% endcomment %}
+
 
 {% endblock %}
 
