--- a/ege_perfil/templates/ege_perfil/perfil_index.html
+++ b/ege_perfil/templates/ege_perfil/perfil_index.html
@@ -21,7 +21,7 @@
                       <v-card-title primary-title class="mt-5">
                         <div style="width:100%">
                           <h3 dark class="headline mb-0 mt-3">Nome do aluno</h3>
-                          <div class="d-flex row align-center justify-between mt-3">
+                          <div class="d-flex row align-center justify-content-around mt-3">
                             <div>
                               <h5>Matrícula</h5>
                               <p>0000.0000.000-00</p>
@@ -40,8 +40,8 @@
                         <v-divider style="margin:0 25px"></v-divider>
 
                         <div style="width:100%">
-                          <div class="d-flex row align-center justify-between mt-3">
-                            <div>
+                          <div class="d-flex row align-center m-3">
+                            <div class="text-justify">
                               <h5>Biografia</h5>
                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit arcu eget consectetur fringilla. Suspendisse potenti. Ut egestas interdum efficitur. Quisque varius tempus dapibus. Quisque iaculis, sapien et condimentum semper, nibh ligula vehicula dolor, nec dapibus ligula ex id libero. Maecenas pulvinar tortor eu suscipit vestibulum. Quisque tristique quis elit a posuere. Sed ac sem mollis, laoreet mi a, pulvinar tellus. Aenean at eros augue. Duis sed lacus quam. Sed dignissim, arcu at laoreet elementum, leo lorem interdum urna, vel laoreet sem orci a diam. Phasellus a nulla a turpis eleifend elementum vel non metus. Aliquam interdum molestie dapibus. Morbi laoreet augue nibh, non venenatis libero tincidunt vel. Donec posuere tortor a ligula consectetur, ut eleifend est scelerisque.</p>
                             </div>
@@ -51,8 +51,8 @@
                         <v-divider style="margin:0 25px"></v-divider>
 
                         <div style="width:100%">
-                          <div class="d-flex row align-center justify-between mt-3">
-                            <div>
+                          <div class="d-flex row align-center m-3">
+                            <div class="text-left">
                               <h5>E-mail</h5>
                               <p class="mt-2">email@email.com</p>
                             </div>
@@ -62,8 +62,8 @@
                         <v-divider style="margin:0 25px"></v-divider>
 
                         <div style="width:100%">
-                          <div class="d-flex row align-center justify-between mt-3">
-                            <div>
+                          <div class="d-flex row align-center m-3">
+                            <div class="text-left">
                               <h5>Recurso de acessibilidade</h5>
                               <div style="line-height:1em">
                                 <p class="mb-0 mt-2">Libras</p>
@@ -76,8 +76,8 @@
                         <v-divider style="margin:0 25px"></v-divider>
 
                         <div style="width:100%">
-                          <div class="d-flex row align-center justify-between mt-3">
-                            <div>
+                          <div class="d-flex row align-center m-3">
+                            <div class="text-left">
                               <h5>Necessidades especiais</h5>
                               <p class="mt-2">Baixa visão</p>
                             </div>
@@ -87,14 +87,14 @@
                         <v-divider style="margin:0 25px"></v-divider>
 
                         <div style="width:100%">
-                          <div class="d-flex row align-center justify-between mt-3">
-                            <div>
+                          <div class="d-flex row align-center m-3">
+                            <div class="text-left">
                               <h5>Cursos inscritos</h5>
-                              <v-card class="mt-2">
+                              <v-card class="mt-2 w-75">
                                 <v-card-title>
                                   <div style="width:100%">
                                     <p dark>Tecnologia e Desenvolvimento de Software</p>
-                                    <div class="d-flex row align-center justify-between">
+                                    <div class="d-flex row align-center ml-1">
                                       <div>
                                         <span style="color:grey">0000.0000.000-00</span>
                                       </div>
@@ -110,11 +110,11 @@
                                 </v-card-title>
                               </v-card>
 
-                              <v-card class="mt-2">
+                              <v-card class="mt-2 w-75">
                                 <v-card-title>
                                   <div style="width:100%">
                                     <p dark>Gestão Ambiental</p>
-                                    <div class="d-flex row align-center justify-between">
+                                    <div class="d-flex row align-center ml-1">
                                       <div>
                                         <span style="color:grey">0000.0000.000-00</span>
                                       </div>
