[UPD] - Introducing Profile in session

--- a/ege_perfil/templates/ege_perfil/index.html
+++ b/ege_perfil/templates/ege_perfil/index.html
@@ -11,6 +11,7 @@
 
 {% block content %}
     <div id="perfil">
+        {{ ege }}
         <v-app id="inspire">
             <v-content style="padding:0">
               <v-container fluid fill-height style="padding:0">
