--- a/ege_perfil/templates/ege_perfil/index.html
+++ b/ege_perfil/templates/ege_perfil/index.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}
+{% extends "ege_theme/base.html" %}
 {% load i18n static %}
 
 {% block title %}Perfil{% endblock %}
